# Rubicon

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
assets/: design.dio
examples/GUI/: README.md  components.d.ts  package.json  pnpm-lock.yaml  vite.config.ts
examples/GUI/src/: App.vue  main.ts  style.css
examples/GUI/src/components/: About.vue  Cloud.vue  Download.vue  Home.vue  Index.vue  Netease.vue  NotFound.vue  SearchMusic.vue  UserInfo.vue
examples/GUI/src/resources/Netease/test/: album.test.js
examples/GUI/src/router/: router.ts
examples/GUI/src/store/: BasicStore.ts
examples/GUI/src/utils/: Http.ts  MyMP3.js  Utils.ts
examples/GUI/src/utils/type/: CloudResponse.ts  NetEasePlayListSong.ts  NeteaseMusicPlayList.ts  UserInfoDetail.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/core/: mod.rs  vibrancy.rs
src-tauri/src/utilities/: parser.rs
src/components/: about.tsx  menubar.tsx  preferences.tsx  searchbox.tsx
src/mock/: search_queue.json
src/pages/: index.tsx  setting.tsx
src/resources/downloader/: App.py  MainServer.py
src/resources/downloader/API/: es.py  files.py  kw.py  qq.py
src/resources/downloader/src/Api/: BaseApi.py  Kuwo.py  MiGu.py  MyFreeMP3.py  Netease.py  QQMusic.py
src/resources/downloader/src/Common/: Concurrency.py  EncryptTools.py  Http.py  Tools.py
src/resources/downloader/src/Types/: Types.py
src/styles/: global.css
src/utils/: badges.ts
