[package]
name = "rubicon"
version = "0.0.1"
description = "Nerd Music Downloader"
authors = ["rainbowflesh"]
license = "MPL"
repository = "https://github.com/rainbowflesh/Rubicon"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0"
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.4.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
