[package]
name = "rubicon"
version = "0.0.1"
description = "Nerd Music Downloader"
authors = ["rainbowflesh"]
license = "MPL"
repository = "https://github.com/rainbowflesh/Rubicon"
edition = "2021"
keywords = ["music", "libp2p", "networking", "ad-hoc", "uav"]
categories = ["network-programming", "asynchronous"]


[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0"
tauri = { version = "1.5", features = ["dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.4"
tokio = { version = "1.3", features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
] }
ractor = "0.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
custom-protocol = ["tauri/custom-protocol"]
